<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgbmi">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText

            android:id="@+id/edtweight"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/edt_weight"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.332">


        </EditText>

        <EditText
            android:id="@+id/edtheightfeet"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/edt_heightfeet"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtweight">

        </EditText>

        <EditText
            android:id="@+id/edtheightinch"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="@font/courgette"

            android:hint="@string/edt_heightinch"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edtcalculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtheightfeet"
            app:layout_constraintVertical_bias="0.0">

        </EditText>

        <Button
            android:textColor="@color/black"
            android:id="@+id/edtcalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:text="@string/edt_calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.751">

        </Button>

        <TextView

            android:id="@+id/edtresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtcalculate"
            app:layout_constraintVertical_bias="0.294">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>






